@@ -1,6 +1,6 @@
 # Bazel Build Visualizer
 
-> **Status: Phase 3 complete — builds are normalized and browsable.** The
+> **Status: v1 complete, with post-v1 local/SSH Workspaces available.** The
 > app launches Bazel for you, shows exactly what it will run and why before it
 > runs it, captures the event stream through an embedded Build Event Service
 > bound to loopback, and turns it into targets, actions, tests, artifacts and
@@ -20,34 +20,73 @@
 > the session says which of the five situations that is rather than leaving a
 > blank. What those two sources actually contain — and the four places the
 > supported Bazel versions disagree about them — is in
-> [docs/exec-log-and-profile.md](docs/exec-log-and-profile.md). See
+> [docs/exec-log-and-profile.md](docs/exec-log-and-profile.md).
+>
+> **Starlark CPU profiling identifies expensive rule and macro code.** The
+> Performance and Full presets retain Bazel's gzip pprof output, normalize its
+> samples without materializing the whole profile, and expose summary, hot
+> function/file, caller/callee, and bounded flame views. The same tables and
+> resolved views are available to the Query page. Sampled CPU remains distinct
+> from elapsed time and from what Bazel waited for. See
+> [docs/starlark-profiling.md](docs/starlark-profiling.md).
+>
 > **Phase 5 adds the dependency graph.** `aquery` and `cquery` are planned from
-> the build's own command line, run after it finishes, and imported: the
+> the build's own command line, run after it finishes, and imported. The
+> Both query scopes are populated from the exact top-level labels the completed build
+> reported, so wildcard-only/manual targets are not accidentally added by
+> either query command's pattern expansion. An incomplete BEP cannot certify
+> that set, and a no-target fallback to requested patterns is recorded as wider. The imported data supplies the
 > declared action graph, the configured-target graph, producer-to-consumer
 > edges and persisted forward and reverse CSR indexes. The Graph card shows
 > what an action depends on, what depends on it, and whether two actions are
 > connected — with a source selector that says whether the graph was confirmed
 > to be this build's, because a dependency tree from a query that analysed a
-> different configuration looks exactly like a correct one. What is actually in
+> different configuration looks exactly like a correct one. The Configurations
+> card also joins those checksums back to the build, pages their effective
+> options, and compares any selected pair without treating older Bazel versions'
+> missing option payload as an empty configuration. What is actually in
 > those protos, across four Bazel versions, is in
 > [docs/aquery-and-cquery.md](docs/aquery-and-cquery.md). See
-> **Phase 6 adds the timeline.** A custom Java2D view that draws aggregate
+> **Phase 6 adds the timeline and critical-path analysis.** A custom Java2D view that draws aggregate
 > density when a build is too big to show span by span and exact spans when it
 > is not, with lanes grouped by runner, mnemonic, package or cache result, a
 > hover readout of everything a time bin knows, and a range you can drag out to
-> filter the actions table. It follows a running build and stops the moment you
-> scroll somewhere — a live update never moves a viewport a person put where it
-> is. 1M spans index in 0.17 s and draw at 0.9 ms a frame. See
+> filter the actions table. The wheel or a two-finger trackpad gesture scrolls
+> through lanes; Control/Command + wheel zooms around the pointer, and macOS
+> also supports a native pinch. It follows a running build until you pan or
+> zoom its time axis — vertical lane scrolling does not stop follow mode, and a
+> live update never moves a time viewport a person put where it is. The
+> Critical Path page keeps Bazel's profile-reported schedule separate from the
+> visualizer's dependency-only lower bound, shows the exact ordered components
+> of each, and connects identified dependency steps back to Actions and Graph.
+> 1M spans index in 0.17 s and draw at 0.9 ms a frame. See
 > [docs/implementation-status.md](docs/implementation-status.md).
+>
+> **Post-v1 Workspaces put local and SSH repositories in independent windows.**
+> Startup restores the Workspace windows left open, or shows recent Workspaces
+> when there is nothing to restore. Each saved entry names one repository, its
+> Bazel executable and either this computer or an SSH destination; several
+> entries can point at different repositories on the same machine. Each window
+> owns its repository tools, Terminal, capture and SSH connection. Different
+> canonical repositories may capture in parallel, while a process-wide lease
+> prevents two windows from capturing the same repository at once. The desktop
+> BES remains bound to `127.0.0.1`, remote capture files return to the local
+> managed session before import, and opening recorded data never reconnects by
+> itself. See [ADR-011](docs/adr/011-ssh-remote-workspaces.md) and
+> [ADR-012](docs/adr/012-multiple-workspace-windows.md).
 
-A local desktop application for capturing, exploring, and understanding
-Bazel builds. It ingests the Build Event Protocol — from builds it launches,
-live streams it attaches to, or files you already have — journals everything
+A local-first desktop application for capturing, exploring, and understanding
+Bazel builds. It ingests the Build Event Protocol — from builds it launches
+on this computer or an explicitly selected SSH host, from live streams it
+attaches to, or from files you already have — journals everything
 raw before interpreting it, and turns the result into fast, honest views:
 a 50-million-row action table that scrolls at 60 fps, a full-build timeline,
-and dependency graphs that are actually the graph they claim to be. It runs
-entirely on your machine, adds no build flags without telling you, and never
-shows a number it cannot define.
+critical-path analysis, and dependency graphs that are actually the graph they
+claim to be. The UI,
+managed capture and analysis remain on the desktop; remote execution happens
+only after the user explicitly selects an SSH Workspace. Build capture then
+runs its separate preflight over that selected connection. The app adds no
+build flags without telling you and never shows a number it cannot define.
 
 ## Building
 
@@ -61,7 +100,7 @@ toolchain ([ADR-008](docs/adr/008-java-25.md) via
 bazel test //...
 ```
 
-UI tests also have functional package suites for quick iteration, while
+UI tests also have package suites for quick iteration, while
 `//ui-swing:tests` remains the complete UI gate. For example:
 
 ```
@@ -70,9 +109,10 @@ bazel test //ui-swing:tests-events
 bazel test //ui-swing:tests-timeline
 ```
 
-Each group compiles to its own test library, so changing a capture test does
-not invalidate the graph, event, or timeline test binaries. Every test class
-still has its existing direct target, such as `//ui-swing:LauncherPanelTest`.
+Each Java package compiles to its own test library, so changing a capture test
+does not invalidate the graph, event, or timeline test libraries. Every test
+class also has a direct package-local runner, such as
+`//ui-swing/src/test/java/com/holtherndon/bazelviz/ui/capture:LauncherPanelTest`.
 
 The four-version Bazel sweep (`BazelVersionMatrixTest`) is excluded from
 every default run and must never be run casually — it starts four Bazel
@@ -82,28 +122,81 @@ servers and has crashed a development machine. See the notes in
 ## Running the app
 
 ```
-bazel run //app:bbv
+bazel run //app:app
 ```
 
-(`bazel run //app:bbv -- --jvm_flag=-Dbbv.smoke=true` opens the window and
-exits after two seconds; used by scripted verification. `bbv.theme` and
-`bbv.appdir` ride the same way, as `--jvm_flag=-D<name>=<value>` arguments
-before the program's own.)
+(`bazel run //app:app -- --jvm_flag=-Dbbv.smoke=true` opens the window and
+exits after two seconds; used by scripted verification. `bbv.appdir` rides the
+same way, as a `--jvm_flag=-D<name>=<value>` argument before the program's own.)
+
+Open **Settings › Preferences…** and choose the **Theme** tab to select a
+persistent appearance. The bundled theme IDs are `light`, `dark`,
+`intellij-light`, `darcula`, `macos-light`, and `macos-dark`.
+`--jvm_flag=-Dbbv.theme=<id>` overrides the saved choice for one process
+without replacing it.
+
+Graphical launches write a bounded rolling log at
+`logs/application.log` below the application-support directory. Choose
+**Diagnostics › Log Detail** to switch between Error, Warn, Info, Debug and
+Trace; Info is the saved first-run default. **Diagnostics** can also open the
+current log in a modeless viewer or reveal it in the system file browser.
+`--jvm_flag=-Dbbv.log.level=<error|warn|info|debug|trace>` overrides the saved
+choice for one process. Headless commands remain console-only and default to
+Warn so their stdout stays machine-readable.
+
+The graphical app restores the Workspace windows that were open when it last
+closed. Otherwise it opens on **Workspaces**, with recent entries newest first.
+Create a named Workspace for one local or SSH repository, or open a recent one.
+Choosing it opens a separate native window; choosing the same profile again
+focuses that existing window. **Workspaces** in the menu recalls the manager or
+creates and edits saved profiles. Closing the last Workspace window shows the
+manager again. Opening or importing historical capture data never selects a
+Workspace and never reconnects to a host recorded in that data.
+
+The **Discovery** tab in **Settings › Preferences…** can hold one optional
+local script. A non-empty script starts with a shebang; that shebang both
+selects its interpreter and drives syntax highlighting in the editor. It runs
+directly on this computer, off the Swing event thread, once at app startup and
+whenever **Run Discovery Now** is used. Its stdout accepts:
+
+```
+local|workspace name|/my/workspace
+ssh|remote workspace name|builder-host|/remote/workspace
+```
+
+Each run replaces the previous **Discovered** rows. Those rows are never saved
+in `workspaces.properties` and cannot be edited or removed individually. The
+SSH field is an OpenSSH destination or configured `Host` alias. Put a custom
+port, jump host, identity, and other SSH connection options in the user's SSH
+configuration.
 
 ## Importing a BEP file from the command line
 
 ```
-bazel run //app:bbv -- import path/to/build.bep
-bazel run //app:bbv -- inspect <session-dir> --events 20
+bazel run //app:app -- import path/to/build.bep
+bazel run //app:app -- inspect <session-dir> --events 20
 ```
 
 For an installable single file, build the deploy jar and run it with the
 native-access grant the launcher would have added:
 
 ```
-bazel build //app:bbv_deploy.jar
-java --enable-native-access=ALL-UNNAMED -jar bazel-bin/app/bbv_deploy.jar import path/to/build.bep
+bazel build //app:app_deploy.jar
+java --enable-native-access=ALL-UNNAMED -jar bazel-bin/app/app_deploy.jar import path/to/build.bep
 ```
+
+For a graphical launch from that jar on macOS, add the JDK package export used
+by the Bazel and packaged launchers so the Timeline can receive native trackpad
+pinch events:
+
+```
+java --enable-native-access=ALL-UNNAMED \
+  --add-exports=java.desktop/com.apple.eawt.event=ALL-UNNAMED \
+  -jar bazel-bin/app/app_deploy.jar
+```
+
+Without that optional export the Timeline still supports its zoom buttons and
+Control/Command + wheel; only native pinch is unavailable.
 
 `bbv import --help` documents the options and the exit-code contract: 0 for a
 clean import, 1 when the source was truncated or corrupt and everything before
@@ -112,7 +205,7 @@ the damage was imported, 3 when the import failed outright.
 ## Launching a build from the command line
 
 ```
-bazel run //app:bbv -- run -- build //...
+bazel run //app:app -- run -- build //...
 ```
 
 The Bazel command goes after `--`, so its options are never confused with
@@ -129,6 +222,20 @@ what you asked for. The build's own result is in the summary.
 If your command already names a `--bes_backend`, `bbv run` stops and asks,
 because redirecting a team's build results away from their own backend is not
 a decision a tool should make.
+
+The desktop UI runs a command in the selected Workspace. For an SSH workspace,
+its form records a name, OpenSSH destination or configured Host alias, optional
+port, absolute remote working directory and remote Bazel executable. Choosing
+that workspace is the explicit action that opens its private OpenSSH
+connection. Capture borrows the same connection and adds only its temporary
+reverse-BES forward and staging files. Authentication, host keys, jump hosts
+and credentials remain in the user's OpenSSH configuration or agent; the
+application stores no password or private key.
+
+**Terminal** is available for both local and SSH workspaces and opens the
+selected workspace's login shell automatically when its tab is visited. It
+stays alive across navigation and closes when its workspace is closed or
+replaced.
 
 ## Running the Phase 0 spikes
 
@@ -166,8 +273,8 @@ executes them — never in CI.)
 | `core-model` | shared domain types: ids, session state machine |
 | `proto` | compiled Bazel protobuf definitions (BEP, spawn log, …) |
 | `bep-codec` | BEP framing/decoding (binary and JSON) |
-| `bazel-runner` | launching and supervising Bazel processes |
-| `capture-bes` | loopback gRPC Build Event Service endpoint for live capture |
+| `runner` | local/SSH command execution and local/SSH+SFTP filesystem access (`//bazel-runner` keeps compatibility aliases) |
+| `capture-bes` | loopback gRPC Build Event Service endpoint and local/SSH live-capture coordination |
 | `capture-file` | importing existing BEP files |
 | `session-format` | on-disk session directory layout, journals, manifests |
 | `storage-sqlite` | explicit-SQL persistence: per-session DB + catalog DB |
@@ -179,17 +286,20 @@ executes them — never in CI.)
 | `test-support` | deterministic synthetic data generators (Tier 1-3) |
 | `benchmarks` | Phase 0 spikes and JMH benchmarks (not shipped) |
 
-Build conventions live in `tools/bbv.bzl` (see
-[ADR-009](docs/adr/009-bazel-build.md), which supersedes
-[ADR-003](docs/adr/003-gradle.md)). Packaging:
+Java packages use native Bazel rules beside their source. Shared test and JVM
+policy values live in `tools/java_test_settings.bzl`; it does not create rules
+or targets. See [ADR-010](docs/adr/010-package-local-bazel-targets.md), which
+amends [ADR-009](docs/adr/009-bazel-build.md) (the Bazel migration that
+superseded [ADR-003](docs/adr/003-gradle.md)). Packaging:
 `bazel run //app:jpackage` builds the macOS app image ([docs/packaging.md](docs/packaging.md)).
 
 ## Documentation
 
 - [docs/architecture.md](docs/architecture.md) — module map, the six graph
   representations, session state machine, pipeline, threading model
-- [docs/adr/](docs/adr/) — ADR-001 … ADR-009, the fixed decisions
-  (ADR-008 supersedes ADR-002; ADR-009 supersedes ADR-003)
+- [docs/adr/](docs/adr/) — ADR-001 … ADR-011, the fixed decisions
+  (ADR-008 supersedes ADR-002; ADR-009 supersedes ADR-003; ADR-010 amends
+  ADR-009's build-target layout; ADR-011 defines SSH remote workspaces)
 - [docs/performance.md](docs/performance.md) — benchmark tiers, Phase 0
   targets and measurements
 - [docs/implementation-status.md](docs/implementation-status.md) — what
@@ -201,6 +311,7 @@ Build conventions live in `tools/bbv.bzl` (see
   [metric-definitions](docs/metric-definitions.md) ·
   [bazel-compatibility](docs/bazel-compatibility.md) ·
   [exec-log-and-profile](docs/exec-log-and-profile.md) ·
+  [starlark-profiling](docs/starlark-profiling.md) ·
   [phase4-contracts](docs/phase4-contracts.md) ·
   [aquery-and-cquery](docs/aquery-and-cquery.md) ·
   [phase5-contracts](docs/phase5-contracts.md) ·
